--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   application:
     name: teste-spring-boot-render
   datasource:
-    url: jdbc:postgresql://localhost:5432/db-teste-render
-    username: postgres
-    password: teste-render
+    url: ${DATABASE_URL}
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
 server:
   port: 8080
